--- a/.gitignore
+++ b/.gitignore
@@ -258,7 +258,7 @@ fabric.properties
 
 venv/
 
-.idea/
+../.idea/
 
 
 # FRONT
@@ -292,3 +292,5 @@ npm-debug.log
 yarn-error.log
 
 # End of https://www.gitignore.io/api/vue,vuejs
+/.env
+/.idea/
