--- a/front/package.json
+++ b/front/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "serve": "vue-cli-service serve",
+        "serve": "vue-cli-service serve --port 9000",
         "build": "rm -rf ../public/{js,css,img} && vue-cli-service build --no-clean",
         "lint": "vue-cli-service lint"
     },
