--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -8,7 +8,7 @@ RUN mkdir -p /api
 
 WORKDIR /api
 
-COPY requeriments.txt /api
+COPY requeriments.txt /api/
 
 RUN pip install -r requeriments.txt
 
@@ -16,4 +16,4 @@ COPY . /api
 
 ENTRYPOINT ["bash", "docker-entrypoint.sh"]
 
-EXPOSE 8000
+EXPOSE 9000
