--- a/front/package.json
+++ b/front/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "serve": "vue-cli-service serve --port 9000",
+        "serve": "vue-cli-service serve --port 8000",
         "build": "rm -rf ../public/{js,css,img} && vue-cli-service build --no-clean",
         "lint": "vue-cli-service lint"
     },
@@ -21,14 +21,14 @@
         "eslint": "^5.16.0",
         "eslint-plugin-vue": "^5.0.0",
         "lottie-web": "^5.5.6",
-        "register-service-worker": "^1.6.2",
         "vue": "^2.6.10",
         "vue-router": "^3.0.3",
         "vue-search-select": "^2.8.3",
         "vue-template-compiler": "^2.6.10",
         "vue-the-mask": "^0.11.1",
         "vuelidate": "^0.7.4",
-        "vuex": "^3.0.1"
+        "vuex": "^3.0.1",
+        "register-service-worker": "^1.6.2"
     },
     "devDependencies": {
         "babel-eslint": "^10.0.1",
