--- a/pycustomer.env.example
+++ b/pycustomer.env.example
@@ -1,2 +1,3 @@
 FRONT_BASE_URL=http://localhost:XXXX
-API_BASE_URL=http://localhost:XXXX/api/v1
+VUE_APP_API_BASE_URL=http://localhost:XXXX/api/v1
+CHOKIDAR_USEPOLLING=true
