--- a/front/package.json
+++ b/front/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
-    "vuetify": "^2.2.11"
+    "vuetify": "^2.2.11",
+    "vue-router": "^3.0.3",
+    "axios": "^0.19.0",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
