--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       - 9000:9000
     expose:
       - 9000
+    depends_on:
+      - postgresql
 
   vue:
     build:
@@ -35,3 +37,16 @@ services:
       - 8000:8000
     expose:
       - 8000
+
+  postgresql:
+    container_name: pycustomer-db
+    image: postgres:12.2-alpine
+    environment:
+      POSTGRES_USER: "${POSTGRES_USER}"
+      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
+      POSTGRES_DB: "${POSTGRES_DB_NAME}"
+      TZ: "GMT"
+    ports:
+      - 5432:5432
+    volumes:
+      - ./docker/postgresql/data:/var/lib/postgresql/data
