--- a/pycustomer.env.example
+++ b/pycustomer.env.example
@@ -1,3 +1,10 @@
 FRONT_BASE_URL=http://localhost:XXXX
 VUE_APP_API_BASE_URL=http://localhost:XXXX/api/v1
 CHOKIDAR_USEPOLLING=true
+
+POSTGRES_DB_NAME=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+DATABASE_HOST=
+DATABASE_PORT=
+TZ=
