--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
   vue:
     build:
       context: ./front
-      dockerfile: Dockerfile
+      dockerfile: database.Dockerfile
     image: jorgem/pycustomer-front
     container_name: pycustomer-front
     env_file:
@@ -37,16 +37,19 @@ services:
       - 8000:8000
     expose:
       - 8000
+    depends_on:
+      - api
+      - postgresql
 
   postgresql:
     container_name: pycustomer-db
     image: postgres:12.2-alpine
-    environment:
-      POSTGRES_USER: "${POSTGRES_USER}"
-      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
-      POSTGRES_DB: "${POSTGRES_DB_NAME}"
-      TZ: "GMT"
+    env_file:
+      - pycustomer.env
     ports:
       - 5432:5432
     volumes:
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
       - ./docker/postgresql/data:/var/lib/postgresql/data
+    expose:
+      - 5432
